--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi aporte al proyecto</title>
+  <title>Perfil estudiantil</title>
 </head>
 <body>
-  
+  <h1>Mi perfil estudiantil</h1>
 </body>
 </html>
