agregando nombre del estudiante.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Mi perfil estudiantil</h1>
   <section>
     <ul>
+      <li><b>Nombre:</b> Juan Sebastian Zarache Barrios</li>
     </ul>
   </section>
 </body>
