agregando semestre que curso actualmente

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <section>
     <ul>
       <li><b>Nombre:</b> Juan Sebastian Zarache Barrios</li>
+      <li><b>Semestre cursado</b> 4</li>
     </ul>
   </section>
 </body>
