agregando hobbies del estudiante

--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
   <h1>Mi perfil estudiantil</h1>
   <section>
     <ul>
-      <li><b>Nombre:</b> Juan Sebastian Zarache Barrios</li>
-      <li><b>Semestre cursado</b> 4</li>
+      <li><b>Nombre: </b>Juan Sebastian Zarache Barrios</li>
+      <li><b>Semestre cursado: </b>4</li>
+      <li><b>Hobbies: </b> 
+        <ul>
+          <li>Escuchar música</li>
+          <li>Ver series</li>
+          <li>Leer</li>
+          <li>Dormir</li>
+          <li>Comprar cosas</li>
+          <li>Tomar fotos</li>
+          <li>Leer libros</li>
+          <li>Jugar videojuegos</li>
+          <li>Ver películas</li>
+          <li>Tomar paquetes de comida</li>
+          <li>Estudiar</li>
+          <li>Llegar al trabajo</li>
+          <li>Comer</li>
+          <li>Ir al gimnasio</li>
+        </ul>
+      </li>
     </ul>
   </section>
 </body>
