agregando estrutura para el contenido de las series favoritas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
           <li>Ir al gimnasio</li>
         </ul>
       </li>
+      <li><b>series favoritas:</b>
+        <ul>
+          <li></li>
+        </ul>
+      </li>
     </ul>
   </section>
 </body>
