mejorando estructura para las series favoritas con una lista ordenada

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         </ul>
       </li>
       <li><b>series favoritas:</b>
-        <ul>
-          <li></li>
-        </ul>
+        <ol>
+          <li>serie 1</li>
+          <li>serie 2</li>
+        </oll>
       </li>
     </ul>
   </section>
